--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,5 @@
-/* @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inter:wght@400;600&display=swap");
-
-body {
-  font-family: "Inter", sans-serif;
-  background-color: #f1f3f6;
-  color: #1c2430;
-  margin: 0;
-}
-
-header {
-  background-color: #fff;
-  padding: 1rem;
-}
-
-h1 {
-  font-size: 1rem;
-  margin: 0;
-}
-
-h2 {
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 600;
-  letter-spacing: 0.75px;
-  color: #515e72;
-}
-
-main {
-  max-width: 40rem;
-  margin: 2rem auto;
-  padding: 0 1rem;
-}
-
-main > p {
-  margin-bottom: 2rem;
-}
-
-main > div {
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 0.25rem;
-  margin-bottom: 2rem;
-}
-
-pre {
-  font-family: "IBM Plex Mono", monospace;
-  font-size: 0.75rem;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-  margin-bottom: 2rem;
-}
-
-li {
-  list-style-type: none;
-  padding: 1rem;
-  background-color: #fff;
-  border-radius: 0.25rem;
-  margin-bottom: 1rem;
-  font-weight: 600;
-  border-radius: 0.25rem;
-} */
-
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inter:wght@400;600&display=swap");
-
+/* 
 body {
   font-family: "Inter", sans-serif;
   background-color: #f1f3f6;
@@ -120,26 +55,79 @@ ul {
 
 li {
   list-style-type: none;
+  padding: 1rem;
   background-color: #fff;
   border-radius: 0.25rem;
   margin-bottom: 1rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-li>p {
   font-weight: 600;
-  padding: 0.5rem;
-}
+  border-radius: 0.25rem;
+} */
 
-li>h1 {
-  padding: 0.5rem;
+body {
+  font-family: "Inter", sans-serif;
+  background-color: #f1f3f6;
+  color: #1c2430;
   margin: 0;
 }
 
-li:last-child {
-  margin-bottom: 0;
+header {
+  background-color: #fff;
+  padding: 1rem;
 }
 
-li:not(:last-child) {
-  border-bottom: 1px solid #e6eaf0;
+h1 {
+  font-size: 1rem;
+  margin: 0;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.75px;
+  color: #515e72;
+}
+
+main {
+  max-width: 40rem;
+  margin: 2rem auto;
+  padding: 0 1rem;
+}
+
+main>p {
+  margin-bottom: 2rem;
+}
+
+main>div {
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  margin-bottom: 2rem;
+}
+
+pre {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 0.75rem;
+}
+
+ul.card-list {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 2rem;
+  list-style-type: none;
+}
+
+ul.card-list li {
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 0.25rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
+  border-radius: 0.25rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+}
+
+ul.card-list li:hover {
+  transform: translateY(-5px);
 }
