--- a/styles.css
+++ b/styles.css
@@ -12743,3 +12743,113 @@ input:checked+.slider:before {
   transform: translateY(0);
   opacity: 1;
 }
+
+/* toggle-switch dark mode*/
+/* .toggle-switch {
+  position: fixed;
+  display: flex;
+  left: 95%;
+  margin-right: 30px;
+  margin-top: 20px;
+}
+
+.toggle-switch p {
+  font-size: 6px;
+  margin-left: 33px;
+  margin-top: 8px;
+  color: black;
+  font-weight: 500;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.dark-mode {
+  background-color: #0a0a0a;
+  color: white;
+}
+
+input:checked+.slider {
+  background-color: #004c99;
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px #004c99;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+} */
+
+/* Rounded sliders */
+/* .slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.link-grow {
+  transform: scale(2);
+}
+
+.list-inline-item img {
+  margin-bottom: 10px;
+}
+
+.grayscale {
+  filter: brightness(0.55);
+}
+
+.grayscale1 {
+  filter: brightness(0.15);
+}
+
+@media (min-width: 768) {
+  .cursor {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .toggle-switch {
+    left: 85%;
+  }
+} */
